[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemy/Regular/Scripts/shark.gd" type="Script" id=1]
[ext_resource path="res://Enemy/Regular/Textures/shark.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 201.95

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 54.3235, 18.5722 )

[node name="Shark" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="IdleTimer" type="Timer" parent="."]

[node name="PatrollingTimer" type="Timer" parent="."]
